--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -5,7 +5,6 @@
 <tr><td width="742"><h3><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485256.md#1" target="_blank">川普抵加州橙县 上万选民海陆两地欢迎</a><br></h3><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485256.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/2-5-1-150x120.jpg" align ="left"></a>10月18日（周日），美国总统川普抵达加州橙县的新港海滩市（Newport Beach）参加了一场私人筹款活动。当天，道路两旁有上万名加州选民挥舞着“Trump 2020”等旗帜、海上更有选民驾驶游艇，共同欢迎川普。他们高喊“Four more years”（再干四年），力挺他连任成功。川普随后也在社交媒体上发视频回应加州选民的热情。
 
 https://.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 10:32 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485050.md#1" target="_blank">中共为何强行火化他们的遗体（15）</a><br></h3><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485050.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/Screen-Shot-2020-10-18-at-7.06.39-PM-150x120.png" align ="left"></a>孔繁荣、孙秀菊、胡大礼，中共为何强行火化他们的遗体？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 8:08 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483177.md#1" target="_blank">美国对中产阶级最好和最糟的十个州</a><br></h3><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483177.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/07/GettyImages-51599832-150x120.jpg" align ="left"></a>美国有50个州，一份最新报告显示，美国一些州比其它州更适合中产阶级。其中对中产阶级最好的州是犹他州，最糟糕的州则是纽约州。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 7:36 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485086.md#1" target="_blank">朱利安尼：拜登儿子抱怨 钱财与老爹分半</a><br></h3><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485086.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-76111059-150x120.jpg" align ="left"></a>前纽约市长、检察官朱利安尼（Rudy Giuliani）上周对美国福克斯新闻表示，美国总统候选人拜登就是硬盘电邮里提到的那个占10%股份的大佬（big guy），而且拜登儿子亨特抱怨自己所得到的钱财一半要分给拜登。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 6:46 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485003.md#1" target="_blank">伊朗称联合国武器禁运到期 蓬佩奥强烈回应</a><br></h3><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485003.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/06/000_1QR3K3-150x120.jpg" align ="left"></a>伊朗周日（10月18日）宣称，联合国对伊朗武器禁运于当日到期。美国国务卿迈克·蓬佩奥（Mike Pompeo）当天发表强烈警告说，所有联合国对伊朗制裁已于上月恢复，美国将对任何协助伊朗武器项目的个人或实体进行制裁。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 5:10 AM							</td></tr>
@@ -54,5 +53,6 @@ Deloitte将关闭英国4个办事处
 澳大利亚疫情热点新增一例
 美将优先为长照机构提供疫苗
 担忧美国欧洲疫.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 11:13 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/10/n12467270.md#1" target="_blank">【成吉思汗】建大蒙古国 封功臣 扩怯薛军</a><br></h3><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/10/n12467270.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/b850eded6a74a987bb45a4956b3ffd1c-150x120.jpg" align ="left"></a>统一了蒙古诸部落的铁木真，已经成为草原上无可争辩的统治者，其控制了从南部戈壁到北极冻土带、从东北森林地带到西部阿尔泰山的广阔领域，以及几十万来自不同游牧部落的人口。不过，虽然铁木真已是草原上的雄主，但仍需要获得所有部族的认同，新的忽里勒台大会的召开势在必行。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 11:08 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nsxsof363/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nsxsof363/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/nsxsof363/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
