--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -9,7 +9,7 @@
 	<p>【大纪元2020年10月19日讯】（大纪元记者夏雨、戴芙若、颜殊璟、林燕综合报导）10月19日全球<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/oqzulz329/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2020101910">全球病例总数突破4千万 死亡逾111万</a></strong><br />
+<p><strong><ahref="#_Toc2020101910">全球病例数突破4千万 死亡逾111万</a></strong><br />
 <strong><ahref="#_Toc2020101909">川普：不会忘记病毒来自中国</a></strong><br />
 <strong><ahref="#_Toc2020101908">美国南部州经济复苏快</a></strong><br />
 <strong><ahref="#_Toc2020101907">欧洲多地爆发抵制防疫措施抗议活动</a></strong><br />
@@ -30,10 +30,14 @@
 <p>欧洲已有超过25万人丧生。那里日益加剧的危机与澳洲形成了对比。澳洲第二大城市已开始放宽封锁。这种封锁曾使数以百万计的人基本上被限制在家中数月之久。</p>
 <p>比利时在应对本国病例激增之际，全国的咖啡馆和餐馆关闭了4个星期。该国病例激增是全欧洲感染激增的一部分。过去一周来，整个欧洲的病例数激增了44％。</p>
 <p><a name="_Toc2020101910"></a></p>
-<h3>全球病例总数突破4千万 死亡逾111万</h3>
+<h3>全球病例数突破4千万 死亡逾111万</h3>
 <p>根据约翰·霍普金斯大学（Johns Hopkins University）的统计，全球中共病毒病例总数已突破4千万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
 <p>截至周一（19日），全球感染总人数达到40,050,902人，死亡总人数达到1,113,750人。</p>
-<p>死亡人数最高的国家是美国，其次是巴西和印度（中国和印度未列入此排名）。</p>
+<p>确诊数和死亡数最高的3个国家是美国、印度和巴西（中国和印度未列入此排名）。</p>
+<p>美国已有近820万人染疫，死亡人数接近22万。这两项数据均位列第一。</p>
+<p>印度近760万人染疫，排名世界第二；死亡人数超过11万，位居世界第三。</p>
+<p>巴西520万人染疫，位居世界第三；死亡超过15万人，排名世界第二。</p>
+<p>同时，欧洲疾病预防控制中心报告，欧洲经济区的死亡人数已超过20万，病例总数达到480万。</p>
 <h3>俄新增病例激增至近1.6万例 再创单日新高</h3>
 <p>俄罗斯官方的数据显示，周一（19日）该国单日新增病例激增至新高，达15,982例，其中包括首都莫斯科的5,376例，全国病例总数达到 1,415,316例。</p>
 <p>当局报告在过去24小时内新增179人死亡。至此，官方报告的死亡总数达到24,366人。</p>
@@ -177,7 +181,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/23/n11473593.md#1" target="_blank">林辉：六七香港红潮 新华社分社发动菠萝战</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/27/n11281560.md#1" target="_blank">加拿大魁北克庆法轮大法日 市长议员祝贺</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10785014.md#1" target="_blank">共产暴政录：镇压“反革命”运动</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/8/22/n9555520.md#1" target="_blank">为什么绝症有时可以不医而愈？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
