--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -31,8 +31,8 @@
 <p>比利时在应对本国病例激增之际，全国的咖啡馆和餐馆关闭了4个星期。该国病例激增是全欧洲感染激增的一部分。过去一周来，整个欧洲的病例数激增了44％。</p>
 <p><a name="_Toc2020101910"></a></p>
 <h3>全球病例数突破4千万 死亡逾111万</h3>
-<p>根据约翰·霍普金斯大学（Johns Hopkins University）的统计，全球中共病毒病例总数已突破4千万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
-<p>截至周一（19日），全球感染总人数达到40,050,902人，死亡总人数达到1,113,750人。</p>
+<p>根据约翰·霍普金斯大学（Johns Hopkins University）的统计，全球中共病毒病例总数已突破4千万。</p>
+<p>截至周一（19日），全球感染总人数达到40,050,902人，死亡总人数达到1,113,750人（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
 <p>确诊数和死亡数最高的3个国家是美国、印度和巴西（中国和印度未列入此排名）。</p>
 <p>美国已有近820万人染疫，死亡人数接近22万。这两项数据均位列第一。</p>
 <p>印度近760万人染疫，排名世界第二；死亡人数超过11万，位居世界第三。</p>
@@ -181,7 +181,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217201.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（上）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2096078.md#1" target="_blank">载入史册的一幕 中南海万人上访</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/15/n11942777.md#1" target="_blank">掸封尘：江青“醋坛子”的能量究竟有多大</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/12/28/n4328405.md#1" target="_blank">云帆：从台北市长保护法轮功学员谈起</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
