--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,6 +25,9 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>单日感染数稳步上升 奥地利限制聚会人数</h3>
+<p>奥地利正在艰难遏制单日感染数的稳步上升。总理塞巴斯蒂安·库尔茨（Sebastian Kurz）周一（19日）表示，该国正在把室内聚会限制在最多6人，室外最多12人。</p>
+<p>奥地利上周六（17日）新增确诊病例达到1,747例，创下单日最高纪录。</p>
 <h3>比利时实行宵禁 瑞士强制戴口罩</h3>
 <p>比利时从周一（19日）开始实行全国性夜间宵禁。瑞士已规定在室内公共场所必须戴口罩。这些是欧洲国家为遏制猛烈的第二波疫情而采取的最新措施。</p>
 <p>欧洲已有超过25万人丧生。那里日益加剧的危机与澳洲形成了对比。澳洲第二大城市已开始放宽封锁。这种封锁曾使数以百万计的人基本上被限制在家中数月之久。</p>
@@ -181,7 +184,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/15/n11942777.md#1" target="_blank">掸封尘：江青“醋坛子”的能量究竟有多大</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/12/28/n4328405.md#1" target="_blank">云帆：从台北市长保护法轮功学员谈起</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/19/n9971114.md#1" target="_blank">文革中自杀的几个名人（6）留美学者陈梦家</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
