--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/10/n10773796.md#1" target="_blank">邪恶帝国——里根总统谴责苏联共产政权</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/9/25/n4257161.md#1" target="_blank">慧真：世纪谎言  自焚伪案</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/17/n11874645.md#1" target="_blank">王友群：习近平的父亲被栽赃陷害16年</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11238180.md#1" target="_blank">感恩法轮功师父 教我做个善良人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
