--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -30,7 +30,11 @@
 <p>奥地利上周六（17日）新增确诊病例达到1,747例，创下单日最高纪录。</p>
 <h3>比利时实行宵禁 瑞士强制戴口罩</h3>
 <p>比利时从周一（19日）开始实行全国性夜间宵禁。瑞士已规定在室内公共场所必须戴口罩。这些是欧洲国家为遏制猛烈的第二波疫情而采取的最新措施。</p>
-<p>欧洲已有超过25万人丧生。那里日益加剧的危机与澳洲形成了对比。澳洲第二大城市已开始放宽封锁。这种封锁曾使数以百万计的人基本上被限制在家中数月之久。</p>
+<blockquote class="twitter-tweet">
+<p lang="en" dir="ltr">Belgium imposes a nationwide overnight curfew as Switzerland makes wearing face masks compulsory in indoor public spaces, the latest desperate measures by European governments to fight a powerful second coronavirus wave <ahref="https://t.co/W8jH35auaT">https://t.co/W8jH35auaT</a> <ahref="https://t.co/uqKKECf7eU"></a><img width="600" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="uqKKECf7eU</a></p>
+<p>&mdash; AFP news agency (@AFP) <ahref="https://twitter.com/AFP/status/1318084466120687617?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
+<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+欧洲已有超过25万人丧生。那里日益加剧的危机与澳洲形成了对比。澳洲第二大城市已开始放宽封锁。这种封锁曾使数以百万计的人基本上被限制在家中数月之久。</p>
 <p>比利时在应对本国病例激增之际，全国的咖啡馆和餐馆关闭了4个星期。该国病例激增是全欧洲感染激增的一部分。过去一周来，整个欧洲的病例数激增了44％。</p>
 <p><a name="_Toc2020101910"></a></p>
 <h3>全球病例数突破4千万 死亡逾111万</h3>
@@ -43,7 +47,11 @@
 <p>同时，欧洲疾病预防控制中心报告，欧洲经济区的死亡人数已超过20万，病例总数达到480万。</p>
 <h3>俄新增病例激增至近1.6万例 再创单日新高</h3>
 <p>俄罗斯官方的数据显示，周一（19日）该国单日新增病例激增至新高，达15,982例，其中包括首都莫斯科的5,376例，全国病例总数达到 1,415,316例。</p>
-<p>当局报告在过去24小时内新增179人死亡。至此，官方报告的死亡总数达到24,366人。</p>
+<blockquote class="twitter-tweet">
+<p lang="en" dir="ltr"><ahref="https://twitter.com/hashtag/BREAKING?src=hash&amp;ref_src=twsrc%5Etfw">#BREAKING</a> Russia confirmed 15,982 new Covid-19 cases Monday, bringing its official number of cases to 1,415,316 and breaking the country&#39;s record for new infections <ahref="https://t.co/1wwxiGFit7">https://t.co/1wwxiGFit7</a></p>
+<p>&mdash; The Moscow Times (@MoscowTimes) <ahref="https://twitter.com/MoscowTimes/status/1318095204835012609?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
+<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+当局报告在过去24小时内新增179人死亡。至此，官方报告的死亡总数达到24,366人。</p>
 <h3>莱德斯罗杯橄榄球赛 超过4.6万名新西兰球迷入场观赛</h3>
 <p>在周日（10月18日）橄榄球布莱德斯罗杯（Bledisloe Cup）的第二场比赛中，新西兰队以27比7击败澳大利亚队。这场比赛的伊甸园球场出现了近乎满员的46,049名观众，这在2020年中是个不寻常的景象。</p>
 <p>上周日（10月11日）的第一场比赛在新西兰惠灵顿的天空体育场进行，吸引了31,000名球迷，澳大利亚队以16比16的比分战平新西兰队。</p>
@@ -184,7 +192,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/17/n10491587.md#1" target="_blank">《共产党宣言》是共产邪灵向人类的宣战书</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/20/n10921963.md#1" target="_blank">福国利民 2018年法轮功所获各类褒奖</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/14/n9955432.md#1" target="_blank">文革中自杀的几个名人（3）红岩作者罗广斌</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3963792.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
