--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484566.md#1" title="【大时代华人】一家挺川反共的纽约教会""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/IMG_2122-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/11/n12468511.md#1" title="【最新疫情10.18】欧美病例激增 但死亡人数少""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1210329499-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://oqzulz329.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486274.md#1">组图：陈志全乐富举行抗疫讲座 声援谭得志</a><br>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486194.md#1">美里根号航母打击群返回南海 缩时短片释出</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485959.md#1">派送费急降又欠薪 大陆多地快递员集体罢工</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486008.md#1">钟南山称板蓝根可治新冠病毒 中共官媒曾辟谣</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486161.md#1">日本研究机构遭网攻 疑中共骇客窃疫苗情报</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485923.md#1">传新华社人事变动 总编辑何平接任社长</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485959.md#1">派送费急降又欠薪 大陆多地快递员集体罢工</a><br>
+:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486333.md#1">美天文学家：小行星或在大选前1天袭击地球</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486178.md#1">中共人质外交威胁美加 专家：流氓本性使然</a><br>
+:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486328.md#1">科学家：小行星可能于美国大选前一天撞地球</a><br>
+:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486274.md#1">组图：陈志全乐富举行抗疫讲座 声援谭得志</a><br>
+:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486194.md#1">美里根号航母打击群返回南海 缩时短片释出</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481940.md#1">恐吓台湾 央视“移花接木”抛出5年前军演</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,810,543 人
+!共 365,812,057 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
