--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,6 +25,11 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>治疗染疫患者 波兰将设立首座战地医院</h3>
+<p>波兰政府周一（19日）表示，该国将在华沙国家体育场开设一家临时医院，以缓解病例激增给医疗系统造成的压力。这是该国第一座治疗中共病毒患者的战地医院。</p>
+<p>这座医院将设在华沙国家体育场的会议室内，初期可容纳500名染疫患者。 据政府说，可能会扩充到最多容纳1000张病床。</p>
+<p>波兰上周五报告新增132人死亡，创下自大流行开始以来单日最高纪录。</p>
+<p>根据约翰·霍普金斯大学（Johns Hopkins University）的数据，迄今波兰已录得175,766例确诊病例、3,573例死亡病例。</p>
 <h3>单日感染数稳步上升 奥地利限制聚会人数</h3>
 <p>奥地利正在艰难遏制单日感染数的稳步上升。总理塞巴斯蒂安·库尔茨（Sebastian Kurz）周一（19日）表示，该国正在把室内聚会限制在最多6人，室外最多12人。</p>
 <p>奥地利上周六（17日）新增确诊病例达到1,747例，创下单日最高纪录。</p>
@@ -192,7 +197,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/14/n9955432.md#1" target="_blank">文革中自杀的几个名人（3）红岩作者罗广斌</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3963792.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（1）</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10487343.md#1" target="_blank">抗日战争期间中共做了啥？ 由图表告诉你！(一)</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/29/n11353494.md#1" target="_blank">章天亮：倾国家之力的迫害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
