--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,26 +25,14 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
-<h3>治疗染疫患者 波兰将设立首座战地医院</h3>
-<p>波兰政府周一（19日）表示，该国将在华沙国家体育场开设一家临时医院，以缓解病例激增给医疗系统造成的压力。这是该国第一座治疗中共病毒患者的战地医院。</p>
-<p>这座医院将设在华沙国家体育场的会议室内，初期可容纳500名染疫患者。 据政府说，可能会扩充到最多容纳1000张病床。</p>
-<p>波兰上周五报告新增132人死亡，创下自大流行开始以来单日最高纪录。</p>
-<p>根据约翰·霍普金斯大学（Johns Hopkins University）的数据，迄今波兰已录得175,766例确诊病例、3,573例死亡病例。</p>
-<h3>单日感染数稳步上升 奥地利限制聚会人数</h3>
-<p>奥地利正在艰难遏制单日感染数的稳步上升。总理塞巴斯蒂安·库尔茨（Sebastian Kurz）周一（19日）表示，该国正在把室内聚会限制在最多6人，室外最多12人。</p>
-<p>奥地利上周六（17日）新增确诊病例达到1,747例，创下单日最高纪录。</p>
 <h3>比利时实行宵禁 瑞士强制戴口罩</h3>
 <p>比利时从周一（19日）开始实行全国性夜间宵禁。瑞士已规定在室内公共场所必须戴口罩。这些是欧洲国家为遏制猛烈的第二波疫情而采取的最新措施。</p>
-<blockquote class="twitter-tweet">
-<p lang="en" dir="ltr">Belgium imposes a nationwide overnight curfew as Switzerland makes wearing face masks compulsory in indoor public spaces, the latest desperate measures by European governments to fight a powerful second coronavirus wave <ahref="https://t.co/W8jH35auaT">https://t.co/W8jH35auaT</a> <ahref="https://t.co/uqKKECf7eU"></a><img width="600" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="uqKKECf7eU</a></p>
-<p>&mdash; AFP news agency (@AFP) <ahref="https://twitter.com/AFP/status/1318084466120687617?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
-<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
-欧洲已有超过25万人丧生。那里日益加剧的危机与澳洲形成了对比。澳洲第二大城市已开始放宽封锁。这种封锁曾使数以百万计的人基本上被限制在家中数月之久。</p>
+<p>欧洲已有超过25万人丧生。那里日益加剧的危机与澳洲形成了对比。澳洲第二大城市已开始放宽封锁。这种封锁曾使数以百万计的人基本上被限制在家中数月之久。</p>
 <p>比利时在应对本国病例激增之际，全国的咖啡馆和餐馆关闭了4个星期。该国病例激增是全欧洲感染激增的一部分。过去一周来，整个欧洲的病例数激增了44％。</p>
 <p><a name="_Toc2020101910"></a></p>
 <h3>全球病例数突破4千万 死亡逾111万</h3>
-<p>根据约翰·霍普金斯大学（Johns Hopkins University）的统计，全球中共病毒病例总数已突破4千万。</p>
-<p>截至周一（19日），全球感染总人数达到40,050,902人，死亡总人数达到1,113,750人（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
+<p>根据约翰·霍普金斯大学（Johns Hopkins University）的统计，全球中共病毒病例总数已突破4千万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
+<p>截至周一（19日），全球感染总人数达到40,050,902人，死亡总人数达到1,113,750人。</p>
 <p>确诊数和死亡数最高的3个国家是美国、印度和巴西（中国和印度未列入此排名）。</p>
 <p>美国已有近820万人染疫，死亡人数接近22万。这两项数据均位列第一。</p>
 <p>印度近760万人染疫，排名世界第二；死亡人数超过11万，位居世界第三。</p>
@@ -52,11 +40,7 @@
 <p>同时，欧洲疾病预防控制中心报告，欧洲经济区的死亡人数已超过20万，病例总数达到480万。</p>
 <h3>俄新增病例激增至近1.6万例 再创单日新高</h3>
 <p>俄罗斯官方的数据显示，周一（19日）该国单日新增病例激增至新高，达15,982例，其中包括首都莫斯科的5,376例，全国病例总数达到 1,415,316例。</p>
-<blockquote class="twitter-tweet">
-<p lang="en" dir="ltr"><ahref="https://twitter.com/hashtag/BREAKING?src=hash&amp;ref_src=twsrc%5Etfw">#BREAKING</a> Russia confirmed 15,982 new Covid-19 cases Monday, bringing its official number of cases to 1,415,316 and breaking the country&#39;s record for new infections <ahref="https://t.co/1wwxiGFit7">https://t.co/1wwxiGFit7</a></p>
-<p>&mdash; The Moscow Times (@MoscowTimes) <ahref="https://twitter.com/MoscowTimes/status/1318095204835012609?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
-<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
-当局报告在过去24小时内新增179人死亡。至此，官方报告的死亡总数达到24,366人。</p>
+<p>当局报告在过去24小时内新增179人死亡。至此，官方报告的死亡总数达到24,366人。</p>
 <h3>莱德斯罗杯橄榄球赛 超过4.6万名新西兰球迷入场观赛</h3>
 <p>在周日（10月18日）橄榄球布莱德斯罗杯（Bledisloe Cup）的第二场比赛中，新西兰队以27比7击败澳大利亚队。这场比赛的伊甸园球场出现了近乎满员的46,049名观众，这在2020年中是个不寻常的景象。</p>
 <p>上周日（10月11日）的第一场比赛在新西兰惠灵顿的天空体育场进行，吸引了31,000名球迷，澳大利亚队以16比16的比分战平新西兰队。</p>
@@ -197,7 +181,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10487343.md#1" target="_blank">抗日战争期间中共做了啥？ 由图表告诉你！(一)</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/29/n11353494.md#1" target="_blank">章天亮：倾国家之力的迫害</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/16/n11191240.md#1" target="_blank">林辉：诬陷美国发动细菌战 毛周被打脸</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/13/n11256153.md#1" target="_blank">留守女孩的命运转变</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
