--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,10 +25,14 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>瑞士新增近9千例确诊</h3>
+<p>瑞士上周末报告了8,737例新增病例。</p>
+<p>据路透社报导，瑞士公共卫生机构报告说，在瑞士及其小邻国列支敦士登公国，确诊病例共计83,159例。</p>
+<p>死亡人数新增了14人，达到1,837人。</p>
 <h3>治疗染疫患者 波兰将设立首座战地医院</h3>
 <p>波兰政府周一（19日）表示，该国将在华沙国家体育场开设一家临时医院，以缓解病例激增给医疗系统造成的压力。这是该国第一座治疗中共病毒患者的战地医院。</p>
 <p>这座医院将设在华沙国家体育场的会议室内，初期可容纳500名染疫患者。 据政府说，可能会扩充到最多容纳1000张病床。</p>
-<p>波兰上周五报告新增132人死亡，创下自大流行开始以来单日最高纪录。</p>
+<p>波兰上周五（16日）报告新增132人死亡，创下自大流行开始以来单日最高纪录。</p>
 <p>根据约翰·霍普金斯大学（Johns Hopkins University）的数据，迄今波兰已录得175,766例确诊病例、3,573例死亡病例。</p>
 <h3>单日感染数稳步上升 奥地利限制聚会人数</h3>
 <p>奥地利正在艰难遏制单日感染数的稳步上升。总理塞巴斯蒂安·库尔茨（Sebastian Kurz）周一（19日）表示，该国正在把室内聚会限制在最多6人，室外最多12人。</p>
@@ -197,7 +201,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010874.md#1" target="_blank">共产暴政录：计划生育是毁我中华的屠婴战争（下）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11243139.md#1" target="_blank">治病与救人 警察为近八旬大夫“站岗”</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/17/n10491587.md#1" target="_blank">《共产党宣言》是共产邪灵向人类的宣战书</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/27/n7938314.md#1" target="_blank">摆脱10多年严重湿疹的折磨</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
