--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -282,16 +282,16 @@
 
 
 <strong>相关新闻：</strong>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486178.md#1">中共人质外交威胁美加 专家：流氓本性使然</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486328.md#1">科学家：小行星或美国大选前一天撞地球</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486161.md#1">日本研究机构遭网攻 疑中共骇客窃疫苗情报</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482137.md#1">【最新疫情10.19】川普：勿忘病毒来自中国</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485442.md#1">华为大势已去？跨大西洋联盟打造清洁网络</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/27/n10515765.md#1" target="_blank">孙盛起：自己选择的路，只好用上吊绳走完</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/4/15/n4132079.md#1" target="_blank">从唐山义女“探父蒙难”看古今对比</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10307769.md#1" target="_blank">中共淫乱的前生今世（10）溃堤效应</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/8/n10127794.md#1" target="_blank">豪门女总裁的私人生活</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
