--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,6 +25,15 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>比利时警告：疫情失控 “海啸”逼近</h3>
+<p>比利时全国的酒吧和餐馆关闭了一个月，而周一起又实行夜间宵禁。卫生官员警告，该国疫情已经失控，很接近于爆发疫情“海啸”。</p>
+<p>美联社报导，新措施旨在限制社交互动，以减缓感染数的指数级增长。新出现的病例激增已促使多家医院推迟非必要的手术，以专注于治疗染疫患者。</p>
+<p>卫生部长弗兰克·范登布鲁克（Frank Vandenbroucke）对广播公司RTL说：“我们真的非常接近于疫情海啸。我们已经控制不住正在发生的事情。”</p>
+<blockquote class="twitter-tweet">
+<p lang="en" dir="ltr">We are really very close to a tsunami. We no longer control what is happening &#8211; Belgian health minister<ahref="https://t.co/El1b3BTOZe">https://t.co/El1b3BTOZe</a></p>
+<p>&mdash; Anu Sieberk (@AnuSieberk) <ahref="https://twitter.com/AnuSieberk/status/1317863445597949953?ref_src=twsrc%5Etfw">October 18, 2020</a></p></blockquote>
+<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+根据欧洲疾病预防控制中心的数据，在过去14天内，比利时记录了每10万人中超过700人感染，是欧洲第二糟糕记录，仅次于捷克的即每10万人中828人感染。</p>
 <h3>瑞士新增近9千例确诊</h3>
 <p>瑞士上周末报告了8,737例新增病例。</p>
 <p>据路透社报导，瑞士公共卫生机构报告说，在瑞士及其小邻国列支敦士登公国，确诊病例共计83,159例。</p>
@@ -201,7 +210,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/27/n10812825.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（4）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240051.md#1" target="_blank">纽约州奥伯尼市长宣布5月13日法轮大法日</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/30/n10600549.md#1" target="_blank">文革中自杀的中共省委书记阎红彦</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/26/n9322928.md#1" target="_blank">一位法轮功学员家属想要说的话</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
