--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -9,14 +9,14 @@
 	<p>【大纪元2020年10月19日讯】（大纪元记者夏雨、戴芙若、颜殊璟、林燕综合报导）10月19日全球<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/oqzulz329/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2020101910">全球病例数突破4千万 死亡逾111万</a></strong><br />
+<p><strong><ahref="#_Toc2020101911">比利时警告：疫情已失控 “海啸”逼近</a></strong><br />
+<strong><ahref="#_Toc2020101910">全球病例数突破4千万 死亡逾111万</a></strong><br />
 <strong><ahref="#_Toc2020101909">川普：不会忘记病毒来自中国</a></strong><br />
 <strong><ahref="#_Toc2020101908">美国南部州经济复苏快</a></strong><br />
 <strong><ahref="#_Toc2020101907">欧洲多地爆发抵制防疫措施抗议活动</a></strong><br />
 <strong><ahref="#_Toc2020101906">南非卫生部长病毒测试呈阳性</a></strong><br />
 <strong><ahref="#_Toc2020101904">IMF：全面封锁可能性较小</a></strong><br />
-<strong><ahref="#_Toc2020101903">疫情导致加拿大人口增长停滞</a></strong><br />
-<strong><ahref="#_Toc2020101902">瘟疫大流行冲击供应链 多国开始屯粮</a></strong></p>
+<strong><ahref="#_Toc2020101903">疫情导致加拿大人口增长停滞</a></strong></p>
 <p>根据约翰?霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月18日下午1时，全球确诊感染<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数已突破4,000万，死亡人数超过111万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
 <p>美国确诊病例超过808万例，死亡超过21.8万人。美东时间周日（10月18日）中午12点21分，美国疾控中心（CDC）数据显示，全美在过去24小时新增53,157病例，死亡593人。每10万人感染人数最多的州是北达科他州、南达科他州、蒙大拿州和威斯康星州。</p>
 <p>欧洲疫情爆发，新病例增长幅度已经超过美国。周日意大利新增病例达11,705，创下纪录，重症室人数也是10天前的2倍。国际货币基金组织表示，全面封锁的可能性不大。</p>
@@ -25,7 +25,8 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
-<h3>比利时警告：疫情失控 “海啸”逼近</h3>
+<p><a name="_Toc2020101911"></a></p>
+<h3>比利时警告：疫情已失控 “海啸”逼近</h3>
 <p>比利时全国的酒吧和餐馆关闭了一个月，而周一起又实行夜间宵禁。卫生官员警告，该国疫情已经失控，很接近于爆发疫情“海啸”。</p>
 <p>美联社报导，新措施旨在限制社交互动，以减缓感染数的指数级增长。新出现的病例激增已促使多家医院推迟非必要的手术，以专注于治疗染疫患者。</p>
 <p>卫生部长弗兰克·范登布鲁克（Frank Vandenbroucke）对广播公司RTL说：“我们真的非常接近于疫情海啸。我们已经控制不住正在发生的事情。”</p>
@@ -210,7 +211,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/30/n10600549.md#1" target="_blank">文革中自杀的中共省委书记阎红彦</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/26/n9322928.md#1" target="_blank">一位法轮功学员家属想要说的话</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/27/n11142951.md#1" target="_blank">共产暴政录：中共鼓励外国残害海外华人</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/11/10/16/n3402449.md#1" target="_blank">辛灏年演讲片段: 驱除马列文化 还我民族之魂</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
