--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10283458.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(上)</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/23/n10871477.md#1" target="_blank">感恩节 来自西方人的最美好心愿</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/11/n10903516.md#1" target="_blank">观雨堂主：一位历史学家在生命终点的“争宠”</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/15/n4663033.md#1" target="_blank">食道癌晚期的绝症患者获救</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
