--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,11 +25,14 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>英国博尔顿女议员染疫住院</h3>
+<p>英国大曼彻斯特地区博尔顿议会工党议员亚斯敏·库雷希（Yasmin Qureshi），因感染了中共病毒而住进医院。</p>
+<p>库雷希周一（19日）在社交媒体上发布声明说，她两周前就开始感到自己病了，随后被确诊感染了中共病毒。上周六病情恶化后，她因肺炎住进医院。</p>
 <p><a name="_Toc2020101911"></a></p>
 <h3>比利时警告：疫情已失控 “海啸”逼近</h3>
-<p>比利时全国的酒吧和餐馆关闭了一个月，而周一起又实行夜间宵禁。卫生官员警告，该国疫情已经失控，很接近于爆发疫情“海啸”。</p>
+<p>比利时新的防疫限制措施于周一（19日）生效，包括将所有咖啡馆、酒吧和餐馆关闭一个月、在全国实行夜间宵禁。在新措施生效前，卫生官员警告，该国疫情已失控，很接近于爆发疫情“海啸”。</p>
 <p>美联社报导，新措施旨在限制社交互动，以减缓感染数的指数级增长。新出现的病例激增已促使多家医院推迟非必要的手术，以专注于治疗染疫患者。</p>
-<p>卫生部长弗兰克·范登布鲁克（Frank Vandenbroucke）对广播公司RTL说：“我们真的非常接近于疫情海啸。我们已经控制不住正在发生的事情。”</p>
+<p>卫生部长弗兰克·范登布鲁克（Frank Vandenbroucke）上周日（18日）对广播公司RTL说：“我们真的非常接近于疫情海啸。我们已经控制不住正在发生的事情。”</p>
 <blockquote class="twitter-tweet">
 <p lang="en" dir="ltr">We are really very close to a tsunami. We no longer control what is happening &#8211; Belgian health minister<ahref="https://t.co/El1b3BTOZe">https://t.co/El1b3BTOZe</a></p>
 <p>&mdash; Anu Sieberk (@AnuSieberk) <ahref="https://twitter.com/AnuSieberk/status/1317863445597949953?ref_src=twsrc%5Etfw">October 18, 2020</a></p></blockquote>
@@ -42,7 +45,11 @@
 <h3>治疗染疫患者 波兰将设立首座战地医院</h3>
 <p>波兰政府周一（19日）表示，该国将在华沙国家体育场开设一家临时医院，以缓解病例激增给医疗系统造成的压力。这是该国第一座治疗中共病毒患者的战地医院。</p>
 <p>这座医院将设在华沙国家体育场的会议室内，初期可容纳500名染疫患者。 据政府说，可能会扩充到最多容纳1000张病床。</p>
-<p>波兰上周五（16日）报告新增132人死亡，创下自大流行开始以来单日最高纪录。</p>
+<blockquote class="twitter-tweet">
+<p lang="en" dir="ltr">Poland to convert stadium into its first coronavirus field hospital<ahref="https://twitter.com/hashtag/218newsenglish?src=hash&amp;ref_src=twsrc%5Etfw">#218newsenglish</a> <ahref="https://twitter.com/hashtag/coronavirus?src=hash&amp;ref_src=twsrc%5Etfw">#coronavirus</a> <ahref="https://twitter.com/hashtag/Poland?src=hash&amp;ref_src=twsrc%5Etfw">#Poland</a> <ahref="https://twitter.com/hashtag/Libya?src=hash&amp;ref_src=twsrc%5Etfw">#Libya</a> <ahref="https://t.co/QWjYSgBxTV"></a><img width="600" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="QWjYSgBxTV</a></p>
+<p>&mdash; 218newsenglish (@218newsenglish) <ahref="https://twitter.com/218newsenglish/status/1318151597264953347?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
+<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+波兰上周五（16日）报告新增132人死亡，创下自大流行开始以来单日最高纪录。</p>
 <p>根据约翰·霍普金斯大学（Johns Hopkins University）的数据，迄今波兰已录得175,766例确诊病例、3,573例死亡病例。</p>
 <h3>单日感染数稳步上升 奥地利限制聚会人数</h3>
 <p>奥地利正在艰难遏制单日感染数的稳步上升。总理塞巴斯蒂安·库尔茨（Sebastian Kurz）周一（19日）表示，该国正在把室内聚会限制在最多6人，室外最多12人。</p>
@@ -211,7 +218,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10749135.md#1" target="_blank">林辉：邓小平女儿指北大曾变成法西斯集中营</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/21/n11130270.md#1" target="_blank">随波逐流成植物人 他何以逢生的奇迹</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/2/n10947759.md#1" target="_blank">传奇总统里根（5）：竞选总统 众望所归</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/4/19/n2881569.md#1" target="_blank">【新纪元周刊】揭开活摘器官黑幕</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
