--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -26,6 +26,12 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>美21州新病例数稳定 27个州上升 两州下降</h3>
+<p>美国<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>数据显示，有21个州新增病例数呈稳定趋势，两个州呈下降趋势，27个州呈上升趋势。</p>
+<p>卫生专家说，全美各地病例数正在上升，似乎证实了秋季病例将激增这一预测。</p>
+<p>与前一周相比，有两个州新增病例数呈下降趋势。这两个州是夏威夷和佛蒙特州。</p>
+<p>有27个州新增病例数呈上升趋势，21个州呈稳定趋势。</p>
+<p>约翰·霍普金斯大学（Johns Hopkins University）的数据显示，截至周一（19日）早晨，美国确诊病例总数已超过800万，死亡人数超过21.9万。</p>
 <h3>疫情致空中旅行停滞以来 TSA单日筛查人数首破百万</h3>
 <p>美国运输安全管理局（TSA）表示，该机构上周日（18日）对超过100万人进行了筛查，这是自今年春季大流行导致空中旅行停滞以来，首次突破百万人。</p>
 <p>TSA说，上周日筛查了1,031,505人，大约是去年同一天筛查的260万人的40％。</p>
@@ -212,7 +218,7 @@
 <p>在疫情爆发后不得不取消航行后，邮轮公司还得为客户预订旅行提供激励措施。例如，Royal Caribbean公司为客户预订的邮轮提供125%的未来信用额度。邮轮评论网站Cruise Critic的一项持续调查发现，截至7月1日，大多数邮轮公司提供的信用额度至少和Royal Caribbean提供的类似，有的还增加一些附加功能，例如将来的船上信用额度。</p>
 <p>邮轮公司给消费者的信息是：我们基本上准备为你们承担即刻预订船票的风险。</p>
 <figure id="attachment_11828037" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/847d21de-dfbe-4b4f-88bb-cff27437c30b-fotolia_233909815_subaion_monthly_m.jpg"><img class="size-large wp-image-11828037" src="https://i.epochtimes.com/assets/uploads/2020/02/847d21de-dfbe-4b4f-88bb-cff27437c30b-fotolia_233909815_subaion_monthly_m-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">邮轮停靠不同港口时，上岸走一走看一看当地风情，品尝一下当地美食，也是坐邮轮的趣味之一。(Fotolia)</figcaption></figure>
-<p>【<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>10.18】请点击<ahref=><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/11/n12468511.md#1">这里</a>。</p>
+<p>【最新疫情10.18】请点击<ahref=><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/11/n12468511.md#1">这里</a>。</p>
 <p>责任编辑：叶紫微#</p>
 	
 <hr>
@@ -228,7 +234,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/17/n11874645.md#1" target="_blank">王友群：习近平的父亲被栽赃陷害16年</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/27/n7938314.md#1" target="_blank">摆脱10多年严重湿疹的折磨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/16/n10398402.md#1" target="_blank">林辉：掩盖大饥荒真相 五省书记罪责难逃（下）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/14/n11383793.md#1" target="_blank">德国小伙修炼法轮功 戒毒戒烟获新生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
