--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -19,7 +19,7 @@
 
 1.哈萨克斯坦爆亨特?......<br><img align="bottom" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/time.gif">10月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485477.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/06/fe83448f748c2ea6be9a1ab534a9a78a-320x200.jpg" align ="left"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485477.md#1" target="_blank">中共外交官闯台外馆国庆酒会打伤人 台抗议</a><br></h3>中华民国国庆是10月10日，外媒报导，台湾驻斐济代表处8日举行国庆......<br><img align="bottom" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/time.gif">10月19日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485538.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/10/download-46-320x200.jpg" align ="left"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485538.md#1" target="_blank">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a><br></h3>拜登悬了？左派计划暴动。中共五中全会或震荡。...<br><img align="bottom" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/time.gif">10月19日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485538.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485538.md#1" target="_blank">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a><br></h3>拜登悬了？左派计划暴动。中共五中全会或震荡。...<br><img align="bottom" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/time.gif">10月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485592.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/10/3314-7-320x200.jpg" align ="left"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485592.md#1" target="_blank">上任半年 中共国税总局稽查副局长林枫被查</a><br></h3>今天（10月19日），中共国家税务总局稽查局副局长林枫涉嫌违纪违法......<br><img align="bottom" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/time.gif">10月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484638.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/10/1200x800____-320x200.jpg" align ="left"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484638.md#1" target="_blank">【珍言真语】刘锐绍：林郑失宠 港官六神无主</a><br></h3>美国总统大选前夕，中国局势也进入多事之秋。最近习近平南巡，中共军方......<br><img align="bottom" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/time.gif">10月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485488.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/10/3-16-320x200.jpg" align ="left"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485488.md#1" target="_blank">【视频】四川洪雅县路基塌陷 现巨大坑洞</a><br></h3>近日，四川眉山市洪雅县余坪镇至雅安市一处路段发生塌陷。有村民拍下事......<br><img align="bottom" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/time.gif">10月19日</td></tr>
