--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -9,7 +9,7 @@
 	<p>【大纪元2020年10月19日讯】（大纪元记者夏雨、戴芙若、颜殊璟、林燕综合报导）10月19日全球<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/oqzulz329/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2020101912">专家：接下来6至12周将是大流行最黑暗时期</a></strong><br />
+<p><strong><ahref="#_Toc2020101912">专家：接下来6至12周是大流行最黑暗时期</a></strong><br />
 <strong><ahref="#_Toc2020101911">比利时警告：疫情已失控 “海啸”逼近</a></strong><br />
 <strong><ahref="#_Toc2020101910">全球病例数突破4千万 死亡逾111万</a></strong><br />
 <strong><ahref="#_Toc2020101909">川普：不会忘记病毒来自中国</a></strong><br />
@@ -26,15 +26,22 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>葡萄牙病例总数突破10万</h3>
+<p>葡萄牙周一（19日）报告了1,949例新增病例，这是该国连续第12天新增病例超过一千。</p>
+<p>迄今，在这个拥有一千万人口的国家，病例总数已突破10万。</p>
+<blockquote class="twitter-tweet">
+<p lang="ca" dir="ltr">Portugal surpasses 100,000 total Covid-19 cases <ahref="https://t.co/1pf3jEyqVy">https://t.co/1pf3jEyqVy</a></p>
+<p>&mdash; Sue Stone (@knittingknots) <ahref="https://twitter.com/knittingknots/status/1318192843622653953?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
+<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+葡萄牙卫生部门还报告，过去24小时内新增17人死亡。至今已有2,198人染疫身亡。</p>
 <h3>美21州新病例数稳定 27个州上升 两州下降</h3>
 <p>美国<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>数据显示，有21个州新增病例数呈稳定趋势，两个州呈下降趋势，27个州呈上升趋势。</p>
 <p>约翰·霍普金斯大学（Johns Hopkins University）的数据显示，截至周一（19日）早晨，美国确诊病例总数已超过800万，死亡人数超过21.9万。</p>
 <p>与前一周相比，有两个州新增病例数呈下降趋势。这两个州是夏威夷和佛蒙特州。</p>
 <p>有27个州新增病例数呈上升趋势，21个州呈稳定趋势。</p>
-<p>卫生专家说，全美各地病例数正在上升，似乎证实了秋季病例将激增这一预测。</p>
-<p>不过，美国首席传染病专家安东尼·福奇说，实行全国封锁并不是前进之路，除非大流行变得“真的很糟”。</p>
+<p>尽管全美各地病例数正在上升，但首席传染病专家安东尼·福奇说，实行全国封锁并不是前进之路，除非大流行变得“真的很糟”。</p>
 <p>他上周日（18日）在受访中告诉CBS首席医学记者拉普克（Jonathan LaPook），疲惫的美国公众应该将公共卫生措施视为安全地保持开放的一种方式。</p>
-<p>专家说，美国人通过听从官员几个月来倡导的指导方针，可以帮助控制病毒：避免置身于拥挤的环境、保持距离，户外仅举行小型聚会和戴口罩。</p>
+<p>专家说，美国人通过听从官员几个月来倡导的指导方针，可以帮助控制病毒。这些指导方针包括避免置身于拥挤的环境、保持距离，户外仅举行小型聚会和戴口罩。</p>
 <h3>疫情致空中旅行停滞以来 TSA单日筛查人数首破百万</h3>
 <p>美国运输安全管理局（TSA）表示，该机构上周日（18日）对超过100万人进行了筛查，这是自今年春季大流行导致空中旅行停滞以来，首次突破百万人。</p>
 <p>TSA说，上周日筛查了1,031,505人，大约是去年同一天筛查的260万人的40％。</p>
@@ -42,11 +49,19 @@
 <p><a name="_Toc2020101912"></a></p>
 <h3>专家：接下来6至12周将是大流行最黑暗时期</h3>
 <p>上周日（18日），美国明尼苏达大学传染病研究与政策中心主任奥斯特霍姆（Michael Osterholm）在NBC节目“与媒体见面”中警告，“接下来的6至12周将是整个大流行最黑暗的时期”。</p>
-<p>奥斯特霍姆告诉该节目主持人查克·托德（Chuck Todd），尽管取得了一些进展，但“疫苗要到明年第三季度才能以任何有意义的方式提供。”</p>
+<blockquote class="twitter-tweet">
+<p lang="en" dir="ltr">Top infectious disease expert says &#39;the next 6 to 12 weeks are going to be the darkest of the entire pandemic&#39; <ahref="https://t.co/bLbN6rWaab">https://t.co/bLbN6rWaab</a></p>
+<p>&mdash; Insider News (@insidernews) <ahref="https://twitter.com/insidernews/status/1317927795700518914?ref_src=twsrc%5Etfw">October 18, 2020</a></p></blockquote>
+<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+奥斯特霍姆告诉该节目主持人查克·托德（Chuck Todd），尽管取得了一些进展，但“疫苗要到明年第三季度才能以任何有意义的方式提供。”</p>
 <p>奥斯特霍姆在节目中还表示： “我们确实有疫苗和治疗方法，但接下来的6到12周将是整个大流行病最黑暗的时期。”</p>
 <h3>英国博尔顿女议员染疫住院</h3>
 <p>英国大曼彻斯特地区博尔顿议会工党女议员亚斯敏·库雷希（Yasmin Qureshi），因感染了中共病毒而住进医院。</p>
-<p>库雷希周一（19日）在社交媒体上发布声明说，她两周前就开始感到自己病了，随后被确诊感染了中共病毒。上周六病情恶化后，她因肺炎住进医院。</p>
+<blockquote class="twitter-tweet">
+<p lang="en" dir="ltr">EXCLUSIVE: Manchester MP Yasmin Qureshi Hospitalised With Covid <ahref="https://t.co/sC8QbIXifN">https://t.co/sC8QbIXifN</a> <ahref="https://t.co/9zWqMsHWD4"></a><img width="600" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="9zWqMsHWD4</a></p>
+<p>&mdash; Guido Fawkes (@GuidoFawkes) <ahref="https://twitter.com/GuidoFawkes/status/1318123551539531777?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
+<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+库雷希周一（19日）在社交媒体上发布声明说，她两周前就开始感到自己病了，随后被确诊感染了中共病毒。上周六病情恶化后，她因肺炎住进医院。</p>
 <p><a name="_Toc2020101911"></a></p>
 <h3>比利时警告：疫情已失控 “海啸”逼近</h3>
 <p>比利时新的防疫限制措施于周一（19日）生效，包括将所有咖啡馆、酒吧和餐馆关闭一个月、在全国实行夜间宵禁。在新措施生效前，卫生官员警告，该国疫情已失控，很接近于爆发疫情“海啸”。</p>
@@ -237,7 +252,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/19/n10071544.md#1" target="_blank">唐恩：从天安门自焚骗局看善恶有报</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/9/n7982398.md#1" target="_blank">大陆教师：婆婆神奇经历改变我的世界观</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217201.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（上）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/12/n11583426.md#1" target="_blank">悉尼女律师：修炼让我找到了人生意义</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
