--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -38,11 +38,11 @@
 <p>美国<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>数据显示，有21个州新增病例数呈稳定趋势，两个州呈下降趋势，27个州呈上升趋势。</p>
 <p>约翰·霍普金斯大学（Johns Hopkins University）的数据显示，截至周一（19日）早晨，美国确诊病例总数已超过800万，死亡人数超过21.9万。</p>
 <p>与前一周相比，有两个州新增病例数呈下降趋势。这两个州是夏威夷和佛蒙特州。</p>
-<p>有27个州新增病例数呈上升趋势，21个州呈稳定趋势。</p>
-<p>卫生专家说，全美各地病例数正在上升，似乎证实了秋季病例将激增这一预测。</p>
-<p>不过，美国首席传染病专家安东尼·福奇说，实行全国封锁并不是前进之路，除非大流行变得“真的很糟”。</p>
+<p>有27个州新增病例数呈上升趋势，21个州呈稳定趋势。<br />
+<figure id="attachment_12486900" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1281080591-e1603117438230.jpg"><img src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1281080591-e1603117438230.jpg" alt="" width="600" b="400" class="size-full wp-image-12486900" /></a><figcaption class="wp-caption-text">10月19日，佛州迈阿密选民戴着口罩排队，等着进行早期投票。(Joe Raedle/Getty Images)<br /></figcaption></figure><br />
+尽管全美各地病例数正在上升，但首席传染病专家安东尼·福奇说，实行全国封锁并不是前进之路，除非大流行变得“真的很糟”。</p>
 <p>他上周日（18日）在受访中告诉CBS首席医学记者拉普克（Jonathan LaPook），疲惫的美国公众应该将公共卫生措施视为安全地保持开放的一种方式。</p>
-<p>专家说，美国人通过听从官员几个月来倡导的指导方针，可以帮助控制病毒：避免置身于拥挤的环境、保持距离，户外仅举行小型聚会和戴口罩。</p>
+<p>专家说，美国人通过听从官员几个月来倡导的指导方针，可以帮助控制病毒。这些指导方针包括避免置身于拥挤的环境、保持距离，户外仅举行小型聚会和戴口罩。</p>
 <h3>疫情致空中旅行停滞以来 TSA单日筛查人数首破百万</h3>
 <p>美国运输安全管理局（TSA）表示，该机构上周日（18日）对超过100万人进行了筛查，这是自今年春季大流行导致空中旅行停滞以来，首次突破百万人。</p>
 <p>TSA说，上周日筛查了1,031,505人，大约是去年同一天筛查的260万人的40％。</p>
@@ -253,7 +253,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/27/n10812825.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（4）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/30/n11355603.md#1" target="_blank">法轮功阿根廷洪传19年 法官曾要抓江罗</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10003609.md#1" target="_blank">大逃港：哪里有自由，哪里就是我的祖国！</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977691.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(1) 不一样的人生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
